[gd_scene load_steps=16 format=2]

[ext_resource path="res://2DWhite.png" type="Texture" id=1]
[ext_resource path="res://Object Images/particleBlue.png" type="Texture" id=2]
[ext_resource path="res://Object Images/PortalBlue.png" type="Texture" id=3]
[ext_resource path="res://Scripts/BluePortal.gd" type="Script" id=4]
[ext_resource path="res://UI/Images/PopUpBG.png" type="Texture" id=5]
[ext_resource path="res://PressStart2P-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://UI/Images/NoButton.png" type="Texture" id=7]
[ext_resource path="res://UI/Images/NoButtonPressed.png" type="Texture" id=8]
[ext_resource path="res://UI/Images/yesButton.png" type="Texture" id=9]
[ext_resource path="res://UI/Images/yesButtonPressed.png" type="Texture" id=10]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.765432, 0.730682 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.438849 )
colors = PoolColorArray( 0.2, 0.12549, 0.254902, 1, 0.873047, 0.487679, 0.729728, 1 )

[sub_resource type="CircleShape2D" id=3]
radius = 16.0

[sub_resource type="CircleShape2D" id=4]
radius = 0.0

[sub_resource type="DynamicFont" id=5]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 1
extra_spacing_bottom = 1
font_data = ExtResource( 6 )

[node name="BluePortal" type="StaticBody2D"]
pause_mode = 2
script = ExtResource( 4 )

[node name="PortalBlue" type="Sprite" parent="."]
position = Vector2( 0, -8 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="PortalBlue"]
amount = 200
lifetime = 20.0
preprocess = 10.0
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 15.0
flag_align_y = true
direction = Vector2( 10, 10 )
spread = 0.0
gravity = Vector2( 0, 0 )
orbit_velocity = 0.15
radial_accel = -20.0
angle = 720.0
scale_amount = 0.1
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Area2D" type="Area2D" parent="."]
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -8 )
shape = SubResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
texture_scale = 0.18
energy = 1.5
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="BG" type="TextureRect" parent="CanvasLayer/Control/CenterContainer"]
margin_left = 80.0
margin_top = 42.0
margin_right = 240.0
margin_bottom = 138.0
texture = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer/BG"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer/BG/VBoxContainer"]
margin_right = 160.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 12 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="CanvasLayer/Control/CenterContainer/BG/VBoxContainer"]
margin_top = 17.0
margin_right = 160.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 5 )
text = "Do you Want To go 
to Previous Level?"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer/BG/VBoxContainer"]
margin_top = 45.0
margin_right = 160.0
margin_bottom = 57.0
rect_min_size = Vector2( 0, 12 )
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer/BG/VBoxContainer"]
margin_top = 62.0
margin_right = 160.0
margin_bottom = 90.0
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer/BG/VBoxContainer/HBoxContainer2"]
margin_right = 78.0
margin_bottom = 28.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Yes" type="TextureButton" parent="CanvasLayer/Control/CenterContainer/BG/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_left = 15.0
margin_right = 63.0
margin_bottom = 28.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer/BG/VBoxContainer/HBoxContainer2"]
margin_left = 82.0
margin_right = 160.0
margin_bottom = 28.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_editor_description_": ""
}

[node name="No" type="TextureButton" parent="CanvasLayer/Control/CenterContainer/BG/VBoxContainer/HBoxContainer2/HBoxContainer2"]
margin_left = 15.0
margin_right = 63.0
margin_bottom = 28.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_editor_description_": ""
}
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/BG/VBoxContainer/HBoxContainer2/HBoxContainer/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/BG/VBoxContainer/HBoxContainer2/HBoxContainer2/No" to="." method="_on_No_pressed"]
